--- a/scheduler.routing.yml
+++ b/scheduler.routing.yml
@@ -25,3 +25,11 @@ scheduler.lightweight_cron:
     no_cache: TRUE
   requirements:
     _custom_access: '\Drupal\scheduler\Controller\LightweightCronController::access'
+
+scheduler.scheduled_content:
+  path: 'admin/content/scheduled'
+  title: 'Scheduled Content'
+  options:
+    _admin_route: TRUE
+  requirements:
+    _permission: 'access content overview'
