--- a/.travis.yml
+++ b/.travis.yml
@@ -81,8 +81,10 @@ before_script:
 
   # Get the latest dev versions of the test dependency modules.
   - travis_retry git clone --branch 8.x-3.x --depth 1 https://git.drupalcode.org/project/rules.git modules/rules
-  - travis_retry git clone --branch 4.x     --depth 1 https://git.drupalcode.org/project/devel.git modules/devel
-  - travis_retry git clone --branch 8.x-1.x --depth 1 https://git.drupalcode.org/project/typed_data.git modules/typed_data
+  - if [ $RULES != "NO" ]; then
+      travis_retry git clone --branch 4.x     --depth 1 https://git.drupalcode.org/project/devel.git modules/devel;
+      travis_retry git clone --branch 8.x-1.x --depth 1 https://git.drupalcode.org/project/typed_data.git modules/typed_data;
+    fi
 
   # Run composer self-update and install.
   - travis_retry composer self-update && travis_retry composer install
