--- a/.travis.yml
+++ b/.travis.yml
@@ -82,7 +82,7 @@ before_script:
   # Get the latest dev versions of the test dependency modules.
   - travis_retry git clone --branch 4.x     --depth 1 https://git.drupalcode.org/project/devel.git modules/devel
   - |
-    if [ $RULES !== "NO" ]; then
+    if [ "$RULES" != "NO" ]; then
       travis_retry git clone --branch 8.x-3.x --depth 1 https://git.drupalcode.org/project/rules.git modules/rules
       travis_retry git clone --branch 8.x-1.x --depth 1 https://git.drupalcode.org/project/typed_data.git modules/typed_data
       echo "Installed Rules and Typed Data"
@@ -112,7 +112,7 @@ before_script:
 script:
   # Run the PHPUnit tests.
   - cd $DRUPAL_ROOT
-  - if [ $RULES = "NO" ]; then
+  - if [ "$RULES" == "NO" ]; then
       ./vendor/bin/phpunit -c ./core/phpunit.xml.dist --debug ./modules/$MODULE/tests/ --filter '/^((?!rules).)*$/i';
     else
       ./vendor/bin/phpunit -c ./core/phpunit.xml.dist --debug ./modules/$MODULE/tests/;
