--- a/.travis.yml
+++ b/.travis.yml
@@ -83,9 +83,9 @@ before_script:
   - travis_retry git clone --branch 4.x     --depth 1 https://git.drupalcode.org/project/devel.git modules/devel
   - |
     if [ "$RULES" != "NO" ]; then
+      echo "Installing Rules and Typed Data ..."
       travis_retry git clone --branch 8.x-3.x --depth 1 https://git.drupalcode.org/project/rules.git modules/rules
       travis_retry git clone --branch 8.x-1.x --depth 1 https://git.drupalcode.org/project/typed_data.git modules/typed_data
-      echo "Installed Rules and Typed Data"
     fi
 
   # Run composer self-update and install.
