--- a/.travis.yml
+++ b/.travis.yml
@@ -120,17 +120,17 @@ script:
       ./vendor/bin/phpunit -c ./core/phpunit.xml.dist --debug ./modules/$MODULE/tests/;
     fi
 
-  # Check for coding standards. First change directory to our module.
-  - composer show drupal/coder | egrep 'vers|name '
-  # Check for coding standards. First change directory to our module.
-  - cd $DRUPAL_ROOT/modules/$MODULE
+  # Check for coding standards. First show the versions.
+  - composer show drupal/coder | egrep 'name |vers'
+  - composer show squizlabs/php_codesniffer | egrep 'name |vers'
 
-  # List all the sniffs that were used.
+  # List all the sniffs that are used.
   - $DRUPAL_ROOT/vendor/bin/phpcs --version
   - $DRUPAL_ROOT/vendor/bin/phpcs -i
   - $DRUPAL_ROOT/vendor/bin/phpcs -e
 
   # Show the violations in detail and do not fail for any errors or warnings.
+  - cd $DRUPAL_ROOT/modules/$MODULE
   - $DRUPAL_ROOT/vendor/bin/phpcs . --runtime-set ignore_warnings_on_exit 1 --runtime-set ignore_errors_on_exit 1
 
   # Run again to give a summary and totals, and fail for errors and warnings.
