--- a/.travis.yml
+++ b/.travis.yml
@@ -17,26 +17,26 @@ env:
 jobs:
   fast_finish: true
   include:
-    # - php: 7.1
-    #   env: DRUPAL_CORE=8.8.x
-    # - php: 7.2
-    #   env: DRUPAL_CORE=8.9.x
-    # - php: 7.3
-    #   env:
-    #     - DRUPAL_CORE=9.0.x
-    #     # --- Remaining self deprecation notices (0)
-    #     # --- Remaining direct deprecation notices (4)
-    #     # 4 inheritEnvironmentVariables
-    #     - DEPRECATIONS=4
-    # - php: 7.4
-    #   env:
-    #     - DRUPAL_CORE=9.1.x
-    #     # --- Remaining self deprecation notices (0)
-    #     # --- Remaining direct deprecation notices (114)
-    #     # 4 inheritEnvironmentVariables
-    #     # 106 EventDispatcher (in Rules module)
-    #     # 4 passing command as string in drush
-    #     - DEPRECATIONS=114
+    - php: 7.1
+      env: DRUPAL_CORE=8.8.x
+    - php: 7.2
+      env: DRUPAL_CORE=8.9.x
+    - php: 7.3
+      env:
+        - DRUPAL_CORE=9.0.x
+        # --- Remaining self deprecation notices (0)
+        # --- Remaining direct deprecation notices (4)
+        # 4 inheritEnvironmentVariables
+        - DEPRECATIONS=4
+    - php: 7.4
+      env:
+        - DRUPAL_CORE=9.1.x
+        # --- Remaining self deprecation notices (0)
+        # --- Remaining direct deprecation notices (114)
+        # 4 inheritEnvironmentVariables
+        # 106 EventDispatcher (in Rules module)
+        # 4 passing command as string in drush
+        - DEPRECATIONS=114
     - php: 7.4
       env:
         # Have a second 9.1 run which excludes the Rules tests.
